--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ ENV/
 
 # Jupyter Notebook checkpoints
 .ipynb_checkpoints/
+*.ipynb
 
 # VSCode settings
 .vscode/
@@ -106,3 +107,4 @@ ENV/
 *.xml
 *.html
 *.0
+
